# phi-3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  startup.sh
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/app/: entrypoint.sh  main.py
chatbot_api/app/models/: query.py
chatbot_api/app/src/: agent.py  chain.py  chain_tools.py  chat_tools.py
chatbot_frontend/: Dockerfile  entrypoint.sh  main.py
notebooks/: inference_snippet.ipynb  main.ipynb
